Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ title: Le Wagon - Middleman
   <div class="banner-content">
     <h1>Le Wagon Rio de Janeiro</h1>
     <p>Learn to code with us in the Carioca way</p>
-    <a class="btn btn-primary btn-lg">Start now</a>
+    <a class="btn btn-danger btn-lg">Start now</a>
   </div>
 </div>
 
