Unfinished dynamic pages

--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -21,3 +21,9 @@
     margin-bottom: 30px;
   }
 }
+
+.banner-small {
+height: 280px;
+background-position: center;
+background-size: cover !important;
+}
